# wavplay

./: .gitignore  CMakeLists.txt  alsa_play.c  alsa_play.h  main.c
